--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "postinstall": "prisma generate",
     "build": "prisma generate  && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
+
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
